testing/tests/roundtrip/invalid/semantic/typecheck/mismatched_equality_int_matrix/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/mismatched_equality_int_matrix/input.essence:3:15:
  |
3 | such that x = y
  |               ^
Type error:
	Expected: int
	Got: matrix indexed by [int, int] of int

